# sync

./: .envrc  .gitignore  AGENTS.md  README.md  lefthook.yml
.github/: copilot-instructions.md
.github/workflows/: ci-server.yml  ci-web.yml
apps/interview/: README.md  pyproject.toml
apps/interview/app/: main.py
apps/interview/app/api/v1/: routes.py
apps/interview/app/api/v1/endpoints/: interview.py
apps/interview/app/core/: config.py  container.py  lifespan.py  logging.py
apps/interview/app/infrastructure/websocket/: __init__.py  handler.py  manager.py  message.py  parser.py
apps/interview/app/services/ai/stt/: base.py  whisper.py
apps/interview/app/services/ai/tts/: base.py  chatterbox.py
apps/interview/app/services/interview/: __init__.py  interview_service.py
apps/interview/app/services/interview/handlers/: __init__.py  audio.py  recording.py
apps/interview/app/utils/: torch.py
apps/server/: .dockerignore  Dockerfile  build.gradle  compose.yaml
apps/web/: .dockerignore  .prettierrc  Dockerfile  components.json  eslint.config.mjs  next.config.ts  orval.config.ts  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
apps/web/.storybook/: main.ts  preview.ts
apps/web/src/api/: s3.ts
apps/web/typings/: tanstack-table.d.ts
docs/api/: openapi3.yaml
infra/k8s/base/: kustomization.yaml
infra/localstack/: docker-compose.yml
infra/localstack/scripts/: init.sh
infra/ollama/: docker-compose.yml
infra/terraform/: .gitignore
scripts/cd/: local-deploy.sh
scripts/ci/: build-web.sh  server.sh  web.sh
scripts/setup/: web.sh
(+1557 files in other folders)
